# uni-work

./: LICENSE  README.md
mechatronics2/mx2TurtleSlam/src/astar_path_planner/: CMakeLists.txt  package.xml  setup.py
mechatronics2/mx2TurtleSlam/src/astar_path_planner/nodes/: astar_path_planning.py  map.txt  map_writer.py
mechatronics2/mx2TurtleSlam/src/pose_publisher/: CMakeLists.txt  package.xml  setup.py
mechatronics2/mx2TurtleSlam/src/pose_publisher/nodes/: pose_publisher
mechatronics2/mx2TurtleSlam/src/pose_pursuit/: CMakeLists.txt  package.xml  setup.py
mechatronics2/mx2TurtleSlam/src/pose_pursuit/nodes/: pose_pursuit
programming_for_mechatronic_systems/12904090_PFMS_ASSIGNMENT_3/src/: CMakeLists.txt  controller.cpp  controller.h  data_updater.cpp  data_updater.h  estimator.cpp  estimator.h  main.cpp  path_tracker.h  planner.cpp  planner.h  pure_pursuit.cpp  pure_pursuit.h  time_planner.cpp  time_planner.h
programming_for_mechatronic_systems/12904090_PFMS_ASSIGNMENT_3/src/dep/bionic/: types.h
programming_for_mechatronic_systems/12904090_PFMS_ASSIGNMENT_3/src/dep/xenial/: types.h
programming_for_mechatronic_systems/12904090_PFMS_ASSIGNMENT_3/src/test/: test_estimator.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/: .gitignore  CMakeLists.txt
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz0/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz0/a/: arrays.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz0/b/: main.cpp  sample.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz1/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz1/a/: main.cpp  person.cpp  person.h
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz1/b/: main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz10/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz2/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz2/a/: circle.h  main.cpp  shape.h
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz2/b/: car.cpp  car.h  main.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz3/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz3/a/: analysis.cpp  circle.cpp  circle.h  line.cpp  line.h  main.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz3/b/: sum_doubles.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz4/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz4/b/: data_race.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz5/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz5/a/: graph.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz5/b/: main.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz6/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz6/a/: main.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz6/b/: complex.cpp  test_complex.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz7/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz7/a/: display_race.cpp  main.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz8/: ACK.txt
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/quiz9/: ACK.txt  README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review0/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review0/a/: arrays.cpp
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review0/b/: main.cpp  sample.cpp  (+1 more)
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review1/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review10/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review2/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review3/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review4/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review5/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review6/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review7/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review8/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/quizzes/review9/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/scratch/12904090_PFMS_ASSIGNMENT_2/: README.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/tutorials/week01/: TUTORIAL.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/tutorials/week02/: TUTORIAL.md
programming_for_mechatronic_systems/pfms-2020a-LucienMorey/tutorials/week07/: TUTORIAL.md
programming_for_mechatronic_systems/pfms_assignment_5_12904090/: CMakeLists.txt  README.md  mainpage.dox  package.xml
programming_for_mechatronic_systems/pfms_assignment_5_12904090/src/: geometry_utility.cpp  geometry_utility.h  image_processing.cpp  image_processing.h  main.cpp  navigator.cpp  navigator.h  path_tracker.cpp  path_tracker.h  point_shoot.cpp  point_shoot.h  pure_pursuit.cpp  pure_pursuit.h
programming_for_mechatronic_systems/pfms_assignment_5_12904090/test/: utest.cpp
programming_for_mechatronic_systems/pfms_assignment_5_12904090/test/samples/: og_clear_laser_blocked.bag  og_clear_laser_blocked_partial.bag  og_clear_laser_clear.bag  og_clear_laser_critical.bag  og_clear_laser_critical_partial.bag
(+306 files in other folders)
