<?xml version="1.0"?>
<package format="2">
  <name>astar_path_planner</name>
  <version>0.0.0</version>
  <description>The astar_path_planner package</description>


  <maintainer email="jesse@todo.todo">jesse</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>nav_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
